<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">SmartLib</string>


  <string name="user_id">User Id</string>
  <string name="user_name">User Name</string>
  <string name="password">PassWord</string>
  <string name="re_password">Re PassWord</string>

  <string name="et_user_id_hint">enter your user id</string>
  <string name="et_user_name_hint">enter your user name</string>
  <string name="et_password_hint">enter your password</string>
  <string name="et_re_password_hint">enter your password again</string>
  <string name="search_hint">Search Books you want...</string>

  <string name="et_old_password_hint">enter your old password...</string>
  <string name="et_new_password_hint">enter your new password...</string>
  <string name="et_new_re_password_hint">enter your new password again...</string>


  <string name="new_password">New Password</string>
  <string name="new_re_password">New Re Password</string>

  <string name="login">login</string>
  <string name="register">register</string>

  <string name="user_id_not_empty">user id not empty!!!</string>
  <string name="user_name_not_empty">user name not empty!!!</string>
  <string name="password_not_empty">password not empty!!!</string>
  <string name="re_password_error">password not the same!!!</string>

  <string name="drawer_open">drawer open</string>
  <string name="drawer_close">drawer close</string>

  <string name="action_search">Search</string>
  <string name="action_settings">Settings</string>
  <string name="action_qr_code">QR Code</string>

  <string name="modify_password">Modify Your Password</string>

  <string name="confirm">confirm</string>


  <array name="normal_user_functions">
    <item>全部</item>
    <item>已借</item>
  </array>

  <array name="administrators_functions">
    <item>全部</item>
    <item>借出</item>
  </array>

</resources>
