<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1">

        <TableRow>

            <TextView
                android:layout_height="wrap_content"
                android:text="@string/user_id"/>

            <EditText
                android:id="@+id/et_user_id"
                android:layout_height="wrap_content"
                android:hint="@string/et_user_id_hint"/>

        </TableRow>


        <TableRow>

            <TextView
                android:layout_height="wrap_content"
                android:text="@string/password"/>

            <EditText
                android:id="@+id/et_password"
                android:layout_height="wrap_content"
                android:hint="@string/et_password_hint"
                android:inputType="textPassword"/>

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btn_login"
                android:layout_height="@dimen/button_height"
                android:layout_span="2"
                android:text="@string/login"/>


        </TableRow>

        <TableRow>


            <Button
                android:id="@+id/btn_register"
                android:layout_height="@dimen/button_height"
                android:layout_span="2"
                android:text="@string/register"/>
        </TableRow>
    </TableLayout>


</FrameLayout>