<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <include layout="@layout/toolbar"/>


  <TableLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:stretchColumns="1">

    <TableRow>

      <TextView
          android:padding="5dp"
          android:layout_height="wrap_content"
          android:text="@string/new_password"/>

      <EditText
          android:padding="5dp"
          android:id="@+id/et_new_password"
          android:layout_height="wrap_content"
          android:hint="@string/et_new_password_hint"/>

    </TableRow>


    <TableRow>

      <TextView
          android:padding="5dp"
          android:layout_height="wrap_content"
          android:text="@string/re_password"/>

      <EditText
          android:padding="5dp"
          android:inputType="textPassword"
          android:id="@+id/et_new_re_password"
          android:layout_height="wrap_content"
          android:hint="@string/et_new_re_password_hint"/>

    </TableRow>

    <TableRow
        android:gravity="center_horizontal">


      <Button

          android:id="@+id/btn_commit"
          android:layout_height="@dimen/button_height"
          android:layout_span="2"
          android:text="@string/confirm"/>


    </TableRow>


  </TableLayout>


</LinearLayout>